resources/webidl2/test/invalid/baseline/implements_and_includes_ws.txt
Syntax error at line 4:
foobar;
^ Unrecognised tokens
